Водограй - птахо - baby

--- a/index.htm
+++ b/index.htm
@@ -270,6 +270,18 @@
         <td>Всё OK!</td>
     </tr>
     <tr>
+        <td><p align="center"><font color="#FF0000" face="System"><strong>Сборник
+        4</strong></font></p>
+        </td>
+        <td><p align="center"><a href="html/sborn4.htm"><font
+        color="#FF00FF" size="5"><strong>Сборник 4</strong></font></a><font
+        color="#FF00FF" size="5"><strong><br>
+        </strong></font><font color="#000000" size="2">(??
+        песен, ?? КБ)</font></p>
+        </td>
+        <td>Всё OK!</td>
+    </tr>
+    <tr>
         <td><p align="center"><font color="#FF0000" face="System"><strong>Сплин</strong></font></p>
         </td>
         <td><p align="center"><a href="html1/spleen.htm"><font
