--- a/html/sborn4.htm
+++ b/html/sborn4.htm
@@ -32,6 +32,9 @@
 <a href="#waterfall"> <font color="#0000A0" size="3" face="Arial">
     <strong>Водограй</strong>
 </font> </a>
+<a href="#malvi"> <font color="#0000A0" size="3" face="Arial">
+    <strong>Жадан - Мальви</strong>
+</font> </a>
 
 <hr size="5" noshade color="#370D7D">
 
@@ -199,6 +202,72 @@ A#                   F
 Зроблю з них цимбали,
 Щоб тобі, дівчино мила,
 Вони красно грали.
+</pre>
+
+
+
+<hr size="5" noshade color="#370D7D">
+
+<a name="malvy"> <font color="#0000A0" size="4" face="Times New Roman Cyr">
+    <strong>Жадан - Мальви</strong>
+</font> </a>
+<a href="#Сборник 4"><font size="4" face="MS Serif"><strong>Вверх!</strong></font></a>
+
+<pre style="font-size: 18px; font-weight: bold; line-height: 1.6;">
+
+1 куплет
+Am                 Dm             G                 C
+Мама мене вчила, що зневіра це зло.
+           Am                Dm             G                 C
+Мене виженуть з пекла за мат та бухло,
+       Am         Dm              G            C
+Вчителі у школі нас лякали КПЗ,
+Am       Dm          E
+Місто сонця, район ХТЗ.
+
+Програш:
+Am Dm G C (4)
+Взято с сайта https://mychords.net
+Я мав купу бабок, я мав купу справ,
+Але мій складний характер мені все зіпсував,
+Бомбонув на Паску не робочий банкомат,
+Пробач мені, мамо, твій син - неадекват...
+
+Приспів:
+Am            Dm               G                 C
+Квітнуть мальви на маминому ганку,
+Am            Dm                G               C
+Я в трьох країнах сидів за хуліганку...
+Am            Dm                 G               C
+Квітнуть мальви на маминому ганку,
+Am             Dm              G                C
+Я в трьох країнах сидів за хуліганку.
+
+2 куплет
+Апостол Петро мене чекає на кортах,
+Я бився в барах, на бульварах і в портах.
+Побився з контролерами в берлінському метро,
+Я сам зробився, як апостол Петро.
+
+Три роки я провів у гніві-вогні,
+Де твоя смиреність - говорять мені?
+Але, що ти зробиш із гарячим нутром,
+Хто на нас з апостолом Петром?
+
+Приспів:
+
+3 куплет
+Державна тюрма - тоталітарна машина,
+Вві сні мені явився український Шива.
+Шива-Шиво, чому так паршиво?
+Чому, ми повинні все це бачити на живо?
+
+А Шива мені каже: біографія це шоу,
+Твій шлях тобі покаже, як далеко ти зайшов,
+Мамина любов не має спротиву і меж,
+Тому краще сидіти там, де ти живеш...
+
+Приспів.
 </pre>
 
 
