Badda Boo draft added

--- a/html/sborn4.htm
+++ b/html/sborn4.htm
@@ -159,7 +159,7 @@ Baby, show me your love
 
 <hr size="5" noshade color="#370D7D">
 
-<a name="wterfall"> <font color="#0000A0" size="4" face="Times New Roman Cyr">
+<a name="waterfall"> <font color="#0000A0" size="4" face="Times New Roman Cyr">
     <strong>Водограй</strong>
 </font> </a>
 <a href="#Сборник 4"><font size="4" face="MS Serif"><strong>Вверх!</strong></font></a>
@@ -227,7 +227,6 @@ Am       Dm          E
 
 Програш:
 Am Dm G C (4)
-Взято с сайта https://mychords.net
 Я мав купу бабок, я мав купу справ,
 Але мій складний характер мені все зіпсував,
 Бомбонув на Паску не робочий банкомат,
@@ -268,6 +267,111 @@ Am             Dm              G                C
 Тому краще сидіти там, де ти живеш...
 
 Приспів.
+</pre>
+<hr size="5" noshade color="#370D7D">
+
+<a name="whatsup"> <font color="#0000A0" size="4" face="Times New Roman Cyr">
+    <strong>4 Non Blondes - What's Up</strong>
+</font> </a>
+<a href="#Сборник 4"><font size="4" face="MS Serif"><strong>Вверх!</strong></font></a>
+
+<pre style="font-size: 18px; font-weight: bold; line-height: 1.6;">
+
+Verse:
+ G
+ Twenty Five years and my life is still
+ Am                                      C
+ Trying to get up that great big hill of hope
+            G
+ For a destination
+ G
+ I realized quickly when I knew that I should
+           Am                                   C
+ That the world was made of this brotherhood of man
+                   G
+ For whatever that means
+
+Pre-Chorus:
+ G
+ And So I cry sometimes when I'm lying in bed
+         Am
+ Just to get it all out
+                        C                        G
+ whats in my head and I, I am feeling a little peculiar.
+ G
+ So I wake in the morning and I step outside
+       Am
+ and I take a deep breath and I get real high and
+   C                                         G
+ I Scream at the top of my lungs  WHATS GOIN ON?
+
+Chorus:
+ G
+ And I said Heyeyeyeyey
+ Am
+ Heyeyey
+        C               G
+ I said Hey Whats going on?
+ G
+ And I said Heyeyeyeyey
+ Am
+ Heyeyey
+        C               G
+ I said Hey Whats going on?
+
+Interlude:
+ G     Am  C G
+ Ooh, Ooh Ooh
+ G     Am  C G
+ Ooh, Ooh Ooh
+
+Verse:
+       G                   Am
+ And I try, oh my god do I try
+               C                  G
+ I try all the time, in this institution
+       G                    Am
+ And I pray, oh my god do I pray
+                     C
+ I pray every single day
+           G
+ For a revolution
+
+Pre-Chorus:
+ G
+ And So I cry sometimes when I'm lying in bed
+         Am
+  Just to get it all out
+                        C                        G
+ whats in my head and I, I am feeling a little peculiar.
+ G
+ So I wake in the morning and I step outside
+       Am
+  and I take a deep breath and I get real high and
+   C                                         G
+ I Scream at the top of my lungs  WHATS GOIN ON?
+
+Chorus:
+ G
+ And I said Heyeyeyeyey
+ Am
+ Heyeyey
+        C               G
+ I said Hey Whats going on?
+ G
+ And I said Heyeyeyeyey
+ Am
+ Heyeyey
+        C               G
+ I said Hey Whats going on?
+
+Outro:
+ G
+ Twenty-five years and my life is still
+ Am                                      C
+ Trying to get up that great big hill of hope
+           G
+ For a destination
 </pre>
 
 
