--- a/index.htm
+++ b/index.htm
@@ -329,6 +329,16 @@
         </td>
         <td>Всё OK! </td>
     </tr>
+    <tr>
+        <td><p align="center"><font color="#FF0000" face="System"><strong>Маша Badda Boo</strong></font></p>
+        </td>
+        <td><p align="center"><a href="html/baddaboo.htm"><font
+        color="#FF00FF" size="5"><strong>Маша Badda Boo</strong></font></a><font
+        color="#FF00FF" size="5"><strong><br>
+        </strong></font><font color="#000000" size="2">-</font></p>
+        </td>
+        <td>draft</td>
+    </tr>
 </table>
 
 <table border="0" width="100%">
