--- a/html/sborn4.htm
+++ b/html/sborn4.htm
@@ -26,14 +26,21 @@
 <a href="#ptaho"> <font color="#0000A0" size="3" face="Arial">
     <strong>Оля Чернишова, Dub Beans - Птахо</strong>
 </font> </a>
+        <br>
 <a href="#baby"> <font color="#0000A0" size="3" face="Arial">
     <strong>Даха Браха - Baby </strong>
 </font> </a>
+        <br>
 <a href="#waterfall"> <font color="#0000A0" size="3" face="Arial">
     <strong>Водограй</strong>
 </font> </a>
+        <br>
 <a href="#malvi"> <font color="#0000A0" size="3" face="Arial">
     <strong>Жадан - Мальви</strong>
+</font> </a>
+        <br>
+<a href="#vetla"> <font color="#0000A0" size="3" face="Arial">
+    <strong>Ветлицкая - Душа</strong>
 </font> </a>
 
 <hr size="5" noshade color="#370D7D">
@@ -375,8 +382,67 @@ Outro:
 </pre>
 
 
+<a name="vetla"> <font color="#0000A0" size="4" face="Times New Roman Cyr">
+    <strong>Ветлицкая - душа</strong>
+</font> </a>
+<a href="#Сборник 4"><font size="4" face="MS Serif"><strong>Вверх!</strong></font></a>
+<pre>
+G#m     F#
+Мне мое солнышко больше не светит
+G#m     F#
+Мне мое солнышко больше не светит
+E  F#  G#m F#
+Не будет песен по весне
+Медные трубы, бубны и флейты
+Медные трубы, бубны и флейты
+E  F#  G#m
+Теперь молчат, ты стал такой, как все
+E B F#
 
+G                                    Em
+Я не услышу криков стай, летящих издалека
+G    G/F    C   C/D#            G E        F#
+Метель в полях бескрайних укрыла небо от меня
 
+B F#  G#m      E
+Мне моя душа на исходе дня
+Пропоет о том, что любовь прошла
+Ты теперь не солнце, а скорей - луна
+B F#  G#m      C#m
+Обо мне забудь, не вспоминай меня
+
+Больше не буду в белом венке
+Больше не буду в белом венке
+Сходить с небес и улыбаться
+И позабуду я о тебе
+Тебе, тебе, тебе
+Сердца заплачут и простятся
+
+Свет далеких далей с тобой теперь не делим мы
+До боли обжигает дыханье ледяной луны
+
+Мне моя душа на исходе дня
+Пропоет о том, что любовь прошла
+Ты теперь не солнце, а скорей - луна
+                              G Em G
+Обо мне забудь, не вспоминай меня
+
+Я не услышу криков стай, летящих издалека
+Метель в полях бескрайних укрыла небо от меня
+
+Мне моя душа на исходе дня
+Пропоет о том, что любовь прошла
+Ты теперь не солнце, а скорей - луна
+Обо мне забудь, не вспоминай меня
+
+B
+
+C# G#  A#m      F#
+Мне моя душа на исходе дня
+Пропоет о том, что любовь прошла
+Ты теперь не солнце, а скорей - луна
+Обо мне забудь, не вспоминай меня
+</pre>
 
 
 
